Updated workshop site
- U: navigation page
- U: _attributes.adoc (location and some values)
- C: openshift.adoc - for openshift setup information (partial)
- C: prereqs.adoc - partial file for prerequisites
- U: site.yml - updated start path

--- a/documentation/modules/ROOT/nav.adoc
+++ b/documentation/modules/ROOT/nav.adoc
@@ -1,6 +1,5 @@
-* xref:01-setup.adoc[1. Setup]
-** xref:01-setup.adoc#prerequisite[Prerequisites]
-** xref:01-setup.adoc#minikube[Setup Minikube]
+* xref:overview.adoc[1. Setup]
+** xref:overview.adoc#prereqs[Pre-Requisites]
 
 * xref:02-deploy.adoc[2. Deploy Service]
 ** xref:02-deploy.adoc#package[Build Service]
