remove browse modules header

--- a/documentation/modules/ROOT/pages/index.adoc
+++ b/documentation/modules/ROOT/pages/index.adoc
@@ -8,7 +8,7 @@
 include::main@vp-workshop:ROOT:partial$_about.adoc[]
 
 [.tiles.browse]
-== Browse modules
+//== Browse modules
 
 [.tile]
 .xref:patterns.adoc[Patterns]
