--- a/documentation/modules/ROOT/pages/patterns.adoc
+++ b/documentation/modules/ROOT/pages/patterns.adoc
@@ -5,11 +5,11 @@ include::_attributes.adoc[]
 
 In this topic  we will discuss:
 
-* What is a GitOps Pattern?
-** Explain high level benefits provided by GitOps Patterns
+* What is a Validated Pattern?
+** Explain high level benefits provided by Validated Patterns
 ** Discuss what is included in the patterns initiative
 ** Detail the difference between a community and validated patterns
-* Who are GitOps Patterns for?
+* Who are Validated Patterns for?
 ** Explain the high level benefit for each persona
 ** Clarify the requirements to become validated
 * Where can you keep up to date or point people to find more information?
