--- a/documentation/modules/ROOT/pages/landscape.adoc
+++ b/documentation/modules/ROOT/pages/landscape.adoc
@@ -12,4 +12,51 @@ include::main@vp-workshop:ROOT:partial$topicHeader.adoc[]
 ** How are they presented to custoemrs
 * Working with Partners
 
+== Available Validated Patterns
+
+[#patterns]
+
+The number of available Patterns has significantly increased with more involvement from the field and our partners. Take a look at the following graphic - at the beginning of 2024 we had a few Patterns delivered by our Partners and few more from the Patterns team and field.
+
+image::landscape-early24.png[]
+
+As of July 2024 we can see that there has been a significant uptick in activity.
+
+image::landscape-july24.png[]
+
+== Validated Patterns WebSite
+The easiest and fastest way to find out what Validated Patterns are available and their availability is to check out the Validated Patterns webiste. 
+
 [#website]
+
+Validated Patterns are an Open Source effort. Information about the Validated Patterns can be found on the link:https://validatedpatterns.io[Patterns Website].
+
+[#github]
+
+The Patterns are also hosted in link:https://github.com/validatedpatterns/repositories[GitHub]
+
+//[#youtube]
+// Find out our youtube channel link
+
+//[#OpenShiftCommons]
+// Find out commons-sig info
+
+== Partners
+[#partners]
+
+Partners have taken notice of what Validated Patterns can bring to their organizations. In turn, they have had focused development cycles to deploy their product/features using the Validated Pattners framework. In the following sections we will discuss how a few of our partners have taken advantage of the Validated Patterns framework.
+
+== Intel
+[#intel]
+
+=== AMX Accelerated Hardware 
+[#intel-mcgo]
+image::landscape-partner-intel-mcgo.png[Intel AMX Multi-Cloud GitOps]
+
+[#intel-md]
+image::landscape-partner-intel-mcgo.png[Intel AMX Medical Diagnosis]
+
+== Portworx
+[#pwx-mcgo]
+image::landscape-partner-portworx.png[Portworx Multi-Cloud GitOps]
+
