Updated workshop with landscape/partner content
- Moved partner stuff into its own file to help with visibility
- Updated nav to reflect

--- a/documentation/modules/ROOT/nav.adoc
+++ b/documentation/modules/ROOT/nav.adoc
@@ -16,16 +16,16 @@
 ** xref:landscape.adoc#objectives[Topic Objectives]
 ** xref:landscape.adoc#patterns[Available Patterns]
 ** xref:landscape.adoc#website[Where to find existing Patterns]
-** xref:landscape.adoc#partners[Working with Partners]
-*** xref:landscape.adoc#intel[Intel]
-**** xref:landscape.adoc#intel-mcgo[Intel MultiCloud GitOps]
-**** xref:landscape.adoc#intel-md[Intel Medical Diagnosis]
-*** xref:landscape.adoc[Portworx]
-**** xref:landscape.adoc#pwx-mcgo[Portworx]
-*** xref:landscape.adoc[Cisco]
-**** xref:landscape.adoc#cisco-pwx-mcgo[Cisco]
-*** xref:landscape.adoc[Veeam/Kasten]
-*** xref:landscape.adoc#veeam-mcgo[Veeam/Kasten]
+** xref:partners.adoc[Partners]
+*** xref:partners.adoc#intel[Intel]
+**** xref:partners.adoc#intel-mcgo[Intel MultiCloud GitOps]
+**** xref:partners.adoc#intel-md[Intel Medical Diagnosis]
+*** xref:partners.adoc[Portworx]
+**** xref:partners.adoc#pwx-mcgo[Portworx]
+*** xref:partners.adoc[Cisco]
+**** xref:partners.adoc#cisco-pwx-mcgo[Cisco]
+*** xref:partners.adoc[Veeam/Kasten]
+**** xref:partners.adoc#veeam-mcgo[Veeam/Kasten]
 
 // Chapter 4 - Pattern Maintenance Tiers
 * xref:tiers.adoc[4. Pattern Tiers]
