--- a/documentation/modules/ROOT/pages/landscape.adoc
+++ b/documentation/modules/ROOT/pages/landscape.adoc
@@ -8,7 +8,7 @@ include::main@vp-workshop:ROOT:partial$topicHeader.adoc[]
 
 * What Validated Patterns are available
 ** What business problems are being addressed?
-** Whethere VPs are only applicable for the vertical industry the demo was created to show
+** Whether VPs are only applicable for the vertical industry the demo was created to show
 ** How are they presented to custoemrs
 * Working with Partners
 
