updated tier support section

--- a/documentation/modules/ROOT/nav.adoc
+++ b/documentation/modules/ROOT/nav.adoc
@@ -29,7 +29,9 @@
 
 // Chapter 4 - Pattern Maintenance Tiers
 * xref:tiers.adoc[4. Pattern Tiers]
-** xref:tiers.adoc#tiers[Pattern Tiers]
+** xref:tiers.adoc#objectives[Topic Objectives]
+** xref:tiers.adoc#about[About the Pattern Tiers]
+** xref:tiers.adoc#resources[Additional Resources]
 
 // Chapter 5 - Creating and Consuming Patterns
 * xref:createConsumePatterns.adoc[5. Creating and Consuming Patterns]
