Changing up the doc format a bit for readability
- Added a partial module for the objectives so we don't have to continue to write it out each time.
- Added a Level2 header to most docs for a clear section title

--- a/documentation/modules/ROOT/pages/consumingPatterns.adoc
+++ b/documentation/modules/ROOT/pages/consumingPatterns.adoc
@@ -1,7 +1,5 @@
-== Helm for Fun and Profit
+== Consuming Patterns
 
 include::_attributes.adoc[]
 
 include::main@vp-workshop:ROOT:partial$topicHeader.adoc[]
-
-[#website]
