--- a/documentation/modules/ROOT/pages/selfContained.adoc
+++ b/documentation/modules/ROOT/pages/selfContained.adoc
@@ -1,3 +1,7 @@
+== Self Contained Patterns
+
 include::_attributes.adoc[]
+
+include::main@vp-workshop:ROOT:partial$topicHeader.adoc[]
 
 [#website]
