--- a/documentation/modules/ROOT/pages/multipleClusters.adoc
+++ b/documentation/modules/ROOT/pages/multipleClusters.adoc
@@ -1,3 +1,7 @@
+== Working with Multiple Clusters
+
 include::_attributes.adoc[]
+
+include::main@vp-workshop:ROOT:partial$topicHeader.adoc[]
 
 [#website]
