adding section for consuming a pattern

--- a/documentation/modules/ROOT/nav.adoc
+++ b/documentation/modules/ROOT/nav.adoc
@@ -40,7 +40,9 @@
 *** xref:consumingPatterns.adoc#workflow[Deployment Workflow]
 *** xref:consumingPatterns.adoc#layering[Solution Layering]
 *** xref:consumingPatterns.adoc#multiArgos[Multiple Argo's]
-*** xref:consumingPatterns.adoc#exercises[Exercies]
+*** xref:consumingPatterns-valuesFiles.adoc#values[Pattern Values Files]
+*** xref:consumingPatterns-valuesFiles.adoc#valuesSecret[Pattern Secret Values Template]
+*** xref:consumingPatterns.adoc#exercises[Exercises]
 ** xref:creatingPatterns.adoc[Creating Validated Patterns]
 ** xref:creatingPatterns.adoc#objectives[Topic Objectives]
 ** xref:creatingPatterns.adoc#technology[Core Products and Technology]
