--- a/documentation/modules/ROOT/pages/consumingPatterns.adoc
+++ b/documentation/modules/ROOT/pages/consumingPatterns.adoc
@@ -22,9 +22,7 @@ image::consuming-vpWorkflow-hub.png[Hub Cluster]
 2. ArgoCD then deploys the operators, namespaces, projects and applications defined in the values files
 3. If deploying across multiple clusters, the framework uses {rhacm} policies to create the instance of {rh-gitops} on the remote cluster
 
-INFO: `values-hub.yaml` is the primary values file for the `hub` cluster
-
-IMPORTANT: Deploying the pattern through the OpenShift Console or via `pattern.sh` will deploy the patterns operator.
+NOTE: `values-hub.yaml` is the primary values file for the `hub` cluster
 
 image::consuming-vpWorkflow-managedCluster.png[Managed Cluster]
 
@@ -32,6 +30,8 @@ image::consuming-vpWorkflow-managedCluster.png[Managed Cluster]
 2. {rhacm} will confirm the cluster is managed then deploy a rhacm agent 
 3. A placement policy is then deployed to the managed cluster which installs an instances of {rh-gitops}
 4. The managed cluster's instance of ArgoCD will then deploy the resources declared in `values-clustergroup.yaml`
+
+IMPORTANT: Deploying the pattern through the OpenShift Console or via `pattern.sh` will deploy the patterns operator.
 
 === Element Layering 
 [#layering]
@@ -57,10 +57,8 @@ The following graphic illustrates swapping components in the framework:
 image::consuming-common-solution-layering-modular.png[]
 
 [#multiArgos]
+== Multiple ArgoCDs
 
 You may be asking yourself ... 
 
-image::consuming-multipleArgos.png
-
-
-
+image::consuming-multipleArgos.png[]
