Added content for pattern operator and wrapper script
- Created content pages for the patterns operator and wrapper scripts
- Added images from the initial powerpoint presentation and worked into adoc.

--- a/documentation/modules/ROOT/nav.adoc
+++ b/documentation/modules/ROOT/nav.adoc
@@ -42,6 +42,9 @@
 *** xref:consumingPatterns.adoc#multiArgos[Multiple Argo's]
 *** xref:consumingPatterns-valuesFiles.adoc#values[Pattern Values Files]
 *** xref:consumingPatterns-valuesFiles.adoc#valuesSecret[Pattern Secret Values Template]
+*** xref:patternsOperator.adoc#features[About the Patterns Operator]
+*** xref:patternsWrapperScript.adoc#about[About the Patterns.sh wrapper]
+*** xref:patternsWrapperScript.adoc#help[Wrapper Help]
 *** xref:consumingPatterns.adoc#exercises[Exercises]
 ** xref:creatingPatterns.adoc[Creating Validated Patterns]
 ** xref:creatingPatterns.adoc#objectives[Topic Objectives]
