--- a/documentation/modules/ROOT/pages/creatingPatterns.adoc
+++ b/documentation/modules/ROOT/pages/creatingPatterns.adoc
@@ -3,17 +3,16 @@ include::_attributes.adoc[]
 
 include::main@vp-workshop:ROOT:partial$topicHeader.adoc[]
 
-* Understanding the core product and technologies
-* Describing a pattern
-* Using the patterns operator
-** And the patterns.sh script
-* Preparing your environment
-* Understand our base pattern
-* To fork or not to fork
+* Understanding `common`
+* Pattern Requirements
+* Creation Process
 
-== Validated Pattern workflow
-[#workflow]
+[#common]
+== Understanding common
 
-Let's dive into what happens when we deploy a pattern! Take a look at the following graphic to see what is deployed on the `hub` clusterGroup cluster.
 
-//image::creating-vpWorkflow-managedCluster.png[]
+[#requirements]
+== Pattern Requirements
+
+[#Creation Process]
+== Creation Process
