--- a/documentation/modules/ROOT/pages/secrets.adoc
+++ b/documentation/modules/ROOT/pages/secrets.adoc
@@ -4,4 +4,12 @@ include::_attributes.adoc[]
 
 include::main@vp-workshop:ROOT:partial$topicHeader.adoc[]
 
-[#website]
+* Secrets and GitOps
+** Understand the challenges around secret material and GitOps
+** Understand the tradeoffs between encrypted secrets vs. references to secrets
+* Vault and External Secrets Operator
+** Get a high level picture of HashiCorp Vault and the External Secrets Operator
+* Secrets Loading
+** How secrets are loaded out of band into the Vault
+
+[#]
