Adding final section to creating pattern including slide from preso

--- a/documentation/modules/ROOT/pages/creatingPatterns.adoc
+++ b/documentation/modules/ROOT/pages/creatingPatterns.adoc
@@ -72,9 +72,13 @@ common
 * Deploying our patterns with multi-source enabled which allows us to use multiple sources for values, which will help reduce the need to have all the charts in the repo
 * Continue to maintain Makefiles, Ansible scripts and other tools in this repo in support of deploying patterns
 
-[#requirements]
-== Pattern Requirements
-
-
 [#Creation Process]
 == Creation Process
+
+image::create-where2start.png[]
+
+One of the first things we should do before embarking on creating a pattern is to identify a problem to solve. This can come from an existing customer problem or an idea on how we can showcase some of our Red Hat products working together. You can use one of our simplest validated patterns, multicloud gitops, as a starting point by using the template to create a new Git repository in your local GitHub account.  You might already have an existing demo that you can use and convert it to use the Validated Pattern framework.
+
+The next step is to identify the technology components that you will need.  In the case of an existing demo you might already know which components are part of the pattern. 
+
+The final step is to ensure that the configuration of those components, and the integration points, are handled in the pattern.  
