--- a/documentation/modules/ROOT/pages/pattern-secrets-management.adoc
+++ b/documentation/modules/ROOT/pages/pattern-secrets-management.adoc
@@ -109,3 +109,34 @@ secrets:
 From the vault interface perspective:
 
 image::global-configdemo-vault.png[]
+
+[#esoconcepts]
+=== ESO Concepts
+
+ESO will read secrets from vault paths (e.g. “`secret/data/global/config-demo`” is a path)
+
+This ExternalSecret object will read all the attributes of the vault key `secret/global/config-demo` and will create a secret called `config-demo-secret` with one entry per attribute.
+
+[source,yaml]
+----
+apiVersion: "external-secrets.io/v1beta1"
+kind: ExternalSecret
+metadata:
+  name: config-demo-secret
+  namespace: config-demo
+spec:
+  secretStoreRef:
+    name: vault-backend
+    kind: ClusterSecretStore
+  target:
+    name: config-demo-secret
+    template:
+      type: Opaque
+  dataFrom:
+  - extract:
+      key: secret/data/global/config-demo
+----
+
+NOTE: How secret material ends up in the vault at a specific path is explained in detail in an upcoming section
+
+
