--- a/documentation/modules/ROOT/pages/pattern-secrets-management.adoc
+++ b/documentation/modules/ROOT/pages/pattern-secrets-management.adoc
@@ -6,7 +6,9 @@
 IMPORTANT: The Validated Patterns team settled on using **references to secrets** 
 
 We currently implement GitOps + Secrets via link:https://external-secrets.io/v0.7.0/[External Secrets Operator] and link:https://www.vaultproject.io/[HashiCorp Vault]
+
 The main reasons for this choice at the time were the following:
+
 * Sealed Secret approach carries additional risks
 * ESO allows us a certain level of independence from the Secrets Management System 
 * HashiCorp Vault is currently the most popular Secret Management Systems
@@ -18,7 +20,8 @@ The main reasons for this choice at the time were the following:
 [#approaches]
 == Approaches
 
-* There are two fundamental approaches to manage secret material within a GitOps context
+There are two fundamental approaches to manage secret material within a GitOps context:
+
 * **Encrypted Secrets** stored inside Git repositories
 * **References to Secrets** stored inside Git repositories and the actual secret is stored somewhere else
 
