--- a/documentation/modules/ROOT/nav.adoc
+++ b/documentation/modules/ROOT/nav.adoc
@@ -85,7 +85,18 @@
 
 //Chapter 8 - GitOps Rough Edges
 * xref:gitopsRoughEdges.adoc[8. GitOps Rough Edges]
-* xref:gitopsRoughEdges.adoc[Exercises]
+** xref:gitopsRoughEdges.adoc#objectives[Topic Objectives]
+** xref:gitopsRoughEdges.adoc#declarativeSync[Declarative Synchronization]
+** xref:gitopsRoughEdges.adoc#imperative[Imperative Actions]
+** xref:gitopsRoughEdges.adoc#jobs[Kubernetes Jobs]
+** xref:gitopsRoughEdges.adoc#cron[Kubernetes cronJobs]
+** xref:gitops-roughedges-syncwave-hooks.adoc[Sync Waves and Hooks]
+*** xref:gitops-roughedges-syncwave-hooks.adoc#using_syncwaves[Using Sync Waves]
+**** xref:gitops-roughedges-syncwave-hooks.adoc#exploring_the_manifests_waves[Exploring Sync Wave Manifests]
+*** xref:gitops-roughedges-syncwave-hooks.adoc#using_resource_hooks[Using Resource Hooks]
+**** xref:gitops-roughedges-syncwave-hooks.adoc#exploring_the_manifests_hooks[Exploring Resource Hook Manifests]
+//*** xref:gitops-roughedges-syncwave-hooks.adoc#deploying_the_application[Deploying the Application]
+** xref:gitopsRoughEdges.adoc[Exercises]
 
 //Chapter 9 - Working with Multiple Clusters 
 * xref:multipleClusters.adoc[9. Working with Multiple Clusters]
