--- a/documentation/modules/ROOT/nav.adoc
+++ b/documentation/modules/ROOT/nav.adoc
@@ -88,8 +88,9 @@
 ** xref:gitopsRoughEdges.adoc#objectives[Topic Objectives]
 ** xref:gitopsRoughEdges.adoc#declarativeSync[Declarative Synchronization]
 ** xref:gitopsRoughEdges.adoc#imperative[Imperative Actions]
-** xref:gitopsRoughEdges.adoc#jobs[Kubernetes Jobs]
-** xref:gitopsRoughEdges.adoc#cron[Kubernetes cronJobs]
+*** xref:gitopsRoughEdges.adoc#jobs[Kubernetes Batch API]
+*** xref:gitopsRoughEdges.adoc#jobs[Kubernetes Jobs]
+*** xref:gitopsRoughEdges.adoc#cron[Kubernetes cronJobs]
 ** xref:gitops-roughedges-syncwave-hooks.adoc[Sync Waves and Hooks]
 *** xref:gitops-roughedges-syncwave-hooks.adoc#using_syncwaves[Using Sync Waves]
 **** xref:gitops-roughedges-syncwave-hooks.adoc#exploring_the_manifests_waves[Exploring Sync Wave Manifests]
