--- a/documentation/modules/ROOT/pages/consumingPatterns.adoc
+++ b/documentation/modules/ROOT/pages/consumingPatterns.adoc
@@ -27,20 +27,20 @@ image::consuming-vpWorkflow-hub.png[Hub Cluster]
 image::consuming-vpWorkflow-managedCluster.png[Managed Cluster]
 
 1. When a managed cluster is joined to {rhacm} it needs to have a clusterGroup label applied to it for the correct policies and applications to be deployed.
-2. {rhacm} will confirm the cluster is managed then deploy a rhacm agent 
+2. {rhacm} will confirm the cluster is managed then deploy a rhacm agent
 3. A placement policy is then deployed to the managed cluster which installs an instances of {rh-gitops}
 4. The managed cluster's instance of ArgoCD will then deploy the resources declared in `values-clustergroup.yaml`
 
 > IMPORTANT: Deploying the pattern through the OpenShift Console or via `pattern.sh` will deploy the patterns operator.
 
-=== Element Layering 
+=== Element Layering
 [#layering]
 
 The base component of every Validated Pattern is `common` - which is a link:https://github.com/validatedpatterns/common[Github Repo]
 
 image::consuming-common.png[common]
 
-Without further configuration, common is acutally quite boring. So let's add another layer! 
+Without further configuration, common is actually quite boring. So let's add another layer!
 
 Your specific industry or use-case is layered into the framework and utilizes the underlying common. In this example the solution includes a bespoke application, cloud-native cluster storage, {rhacs}, and an enterprise container registry. The framework will deploy and configure these components through Helm charts, kustomize manifests or Ansible if necessary.
 
@@ -59,6 +59,6 @@ image::consuming-common-solution-layering-modular.png[]
 [#multiArgos]
 == Multiple ArgoCDs
 
-You may be asking yourself ... 
+You may be asking yourself ...
 
 image::consuming-multipleArgos.png[]
