--- a/documentation/modules/ROOT/pages/partners.adoc
+++ b/documentation/modules/ROOT/pages/partners.adoc
@@ -2,7 +2,7 @@
 
 include::_attributes.adoc[]
 
-Partners have taken notice of what Validated Patterns can bring to their organizations. In turn, they have had focused development cycles to deploy their product/features using the Validated Pattners framework. In the following sections we will discuss how a few of our partners have taken advantage of the Validated Patterns framework.
+Partners have taken notice of what Validated Patterns can bring to their organizations. In turn, they have had focused development cycles to deploy their product/features using the Validated Patterns framework. In the following sections we will discuss how a few of our partners have taken advantage of the Validated Patterns framework.
 
 == Intel
 [#intel]
