--- a/documentation/modules/ROOT/pages/tiers.adoc
+++ b/documentation/modules/ROOT/pages/tiers.adoc
@@ -6,7 +6,7 @@ include::main@vp-workshop:ROOT:partial$topicHeader.adoc[]
 
 * What are the Validated Pattern Maintenance Tiers?
 ** What's the difference between the tiers?
-* Additional information on mainteance tiers and the pattern support policy
+* Additional information on maintenance tiers and the pattern support policy
 
 == Tiers
 [#about]
@@ -38,7 +38,7 @@ a| * must include a standardized architecture diagram using (or conforming to) t
 
 |`Maintained`
 a| * functional on all currently supported/extended update support (EUS) versions of OpenShift
-  * must fix breakage in a timely mannger
+  * must fix breakage in a timely manner
   * must document their support policy
 | https://validatedpatterns.io/learn/maintained
 
