--- a/documentation/modules/ROOT/nav.adoc
+++ b/documentation/modules/ROOT/nav.adoc
@@ -102,14 +102,14 @@
 //Chapter 9 - Working with Multiple Clusters 
 * xref:multipleClusters.adoc[9. Working with Multiple Clusters]
 
-//Chapter 10 - Troubleshooting
-* xref:troubleshooting.adoc[10. Troubleshooting]
-
-//Chapter 11 - Helm for Fun and Profit
-* xref:helm.adoc[11. Helm for Fun and Profit]
-
 //Appendix - Additional Resources
 * xref:additionalTopics.adoc[12. Additional Resources]
+** xref:imperative.adoc[Imperative Framework]
+*** xref:imperative.adoc[Topic Objectives]
+** xref:helm.adoc[Helm for Fun and Profit]
+*** xref:helm.adoc#objectives[Topic Objectives]
+** xref:troubleshooting.adoc[Troubleshooting]
+*** xref:troubleshooting.adoc#objectives[Topic Objectives]
 
 // Keeping track of what's unaccounted for  in toc
 // Handling Cluster Domains 
@@ -117,6 +117,15 @@
 
 // MultiSource
 * xref:multisource.adoc[xx. Multi Source Patterns]
+** xref:multisource.adoc#objectives[Topic Objectives]
+** xref:multisource.adoc#meaning[What does it mean to use multisource?]
+** xref:multisource.adoc#how[How it works]
+** xref:multisource.adoc#status[Current Status]
+** xref:multisource.adoc#ux[User Experience]
+** xref:multisource.adoc#helmRepo[Helm Chart Repository]
+** xref:multisource.adoc#chart-release[Creating a chart release]
+** xref:multisource.adoc#next[Next Steps]
 
 // Imperative Framework
 * xref:imperative.adoc[xx. Imperative Framework]
+** xref:imperative.adoc#objectives[Topic Objectives]
