updated ui bundle and added pagination

--- a/documentation/modules/ROOT/pages/index.adoc
+++ b/documentation/modules/ROOT/pages/index.adoc
@@ -1,6 +1,7 @@
 = Welcome to the Validated Patterns Workshop
 :page-layout: default
 :!sectids:
+:page-pagination:
 
 [.text-center.strong]
 == Overview
